force-app/main/default/objects/ShipmentCommission__c/ShipmentCommission__c.object-meta.xml
<CustomObject>
    <label>Shipment + Commission</label>
    <nameField>
        <displayFormat>SM-{00000}</displayFormat>
        <label>Shipment Commission  ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipment + Commission</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>