force-app/main/default/objects/ShipmentCommission__c/fields/HouseShipment__c.field-meta.xml
<CustomField>
    <fullName>HouseShipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>House Shipment</label>
    <referenceTo>FTMSSO__c</referenceTo>
    <relationshipLabel>Shipment + Commission</relationshipLabel>
    <relationshipName>Shipment_Commission</relationshipName>
    <type>Lookup</type>
</CustomField>