force-app/main/default/objects/ShipmentCommission__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HouseShipment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>